--- a/ants.html
+++ b/ants.html
@@ -10,6 +10,9 @@
 
     <title>Modern Business - Start Bootstrap Template</title>
 
+    <!-- favicon Calvert Exterminators logo -->
+    <link rel="icon" href="CalvertExt-logo.png">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
