--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <!--div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')"-->
+        <div class="carousel-item" style="background-image: url('dennis-with-dogs.png')">
           <div class="carousel-caption d-none d-md-block">
             <h3 class="h3-carousel">Got Termites?</h3>
             <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
@@ -224,7 +225,8 @@
     <div class="row">
       <div class="card-group">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+          <!--a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a-->
+          <a href="pest-control.html"><img class="card-img-top" src="mouse-trap.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="pest-control.html">Pest Control</a>
@@ -233,7 +235,8 @@
           </div>
         </div>
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+          <!--a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a-->
+          <a href="termite-control.html"><img class="card-img-top" src="termites.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="termite-control.html">Termite Control</a>
@@ -247,7 +250,8 @@
       <div class="row">
         <div class="card-group">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <!--a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a-->
+            <a href="bed-bugs.html"><img class="card-img-top" src="bedbug.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="bed-bugs.html">Bed Bug Treatment</a>
@@ -256,7 +260,8 @@
             </div>
           </div>
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <!--a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a-->
+            <a href="mosquitoes.html"><img class="card-img-top" src="mosquito.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="mosquitoes.html">Mosquito Control</a>
@@ -266,7 +271,8 @@
             </div>
           </div>
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <!--a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a-->
+            <a href="trapping.html"><img class="card-img-top" src="raccoon.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="trapping.html">Wildlife Control</a>
