--- a/mammals.html
+++ b/mammals.html
@@ -10,6 +10,9 @@
 
     <title>Mammals</title>
 
+    <!-- favicon Calvert Exterminators logo -->
+    <link rel="icon" href="CalvertExt-logo.png">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -132,9 +135,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="bat.jpg" alt="">
+            <!--a href="#">
                 <a title="U.S. Fish and Wildlife Service Headquarters / Public domain" href="https://commons.wikimedia.org/wiki/File:Big_brown_bat_(5600873374).jpg"><img width="256" alt="Big brown bat (5600873374)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Big_brown_bat_%285600873374%29.jpg/256px-Big_brown_bat_%285600873374%29.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a rel="nofollow" class="external text" href="https://www.flickr.com/people/50838842@N06">U.S. Fish and Wildlife Service Headquarters</a> - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/usfwshq/5600873374/">Big brown bat</a>Uploaded by <a href="//commons.wikimedia.org/wiki/User:Dolovis" title="User:Dolovis">Dolovis</a>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=31316941">Link</a>
             </a-->
@@ -142,10 +146,11 @@
         <div class="col-md-5">
             <h3 class="my-3">ANIMAL DESCRIPTION</h3>
             <p>
-                With ten species in Maryland, bats can live in MD all year long while other migrate here in the spring and fall.
+                With ten species in Maryland, bats can live in MD all year long while others migrate here in the spring and fall.
+                Bats can be found in almost every type of habitat, from deserts to woodlands and suburbs to cities.
                 The common species are the little brown bat and big brown bat. They live and hunt nocturnally in large colonies
                 or small families. Young bats can occasionally enter houses and will explore for a way out. Bats can be known to
-                carry diseases such as rabies and histoplasmosis.
+                carry diseases such as rabies and histoplasmosis. Bats routinely find their way into people's property and can spread disease easily.
             </p>
         </div>
     </div>
@@ -169,7 +174,10 @@
         <div class="col">
             <h3 class="my-3">HABITAT</h3>
             <ul>
-                <li></li>
+                <li>Woodlands</li>
+                <li>Caves</li>
+                <li>Suburbs</li>
+                <li>Cities</li>
             </ul>
         </div>
         <div class="col">
@@ -193,9 +201,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="beaver.jpg" alt="">
+            <!--a href="#">
                 <a title="Steve from washington, dc, usa / CC BY-SA (https://creativecommons.org/licenses/by-sa/2.0)" href="https://commons.wikimedia.org/wiki/File:American_Beaver.jpg"><img width="512" alt="American Beaver" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/American_Beaver.jpg/512px-American_Beaver.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a rel="nofollow" class="external text" href="https://www.flickr.com/people/31563480@N00">Steve</a> from washington, dc, usa - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/31563480@N00/2452702213/">American Beaver</a>, <a href="https://creativecommons.org/licenses/by-sa/2.0" title="Creative Commons Attribution-Share Alike 2.0">CC BY-SA 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=3963858">Link</a>
             </a-->
@@ -240,9 +249,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="coyote.jpg" alt="">
+            <!--a href="#">
                 <a title="Yathin S Krishnappa / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:2009-Coyote-Yosemite.jpg"><img width="512" alt="2009-Coyote-Yosemite" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/2009-Coyote-Yosemite.jpg/512px-2009-Coyote-Yosemite.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a href="//commons.wikimedia.org/wiki/User:Yathin_sk" title="User:Yathin sk">Yathin S Krishnappa</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=21284376">Link</a>
             </a-->
@@ -290,9 +300,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="fox.jpg" alt="">
+            <!--a href="#">
                 <a title="Airwolfhound from Hertfordshire, UK / CC BY-SA (https://creativecommons.org/licenses/by-sa/2.0)" href="https://commons.wikimedia.org/wiki/File:Fox_-_British_Wildlife_Centre_(17429406401).jpg"><img width="512" alt="Fox - British Wildlife Centre (17429406401)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Fox_-_British_Wildlife_Centre_%2817429406401%29.jpg/512px-Fox_-_British_Wildlife_Centre_%2817429406401%29.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a rel="nofollow" class="external text" href="https://www.flickr.com/people/24874528@N04">Airwolfhound</a> from Hertfordshire, UK - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/24874528@N04/17429406401/">Fox - British Wildlife Centre</a>, <a href="https://creativecommons.org/licenses/by-sa/2.0" title="Creative Commons Attribution-Share Alike 2.0">CC BY-SA 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=40155127">Link</a>
             </a-->
@@ -337,9 +348,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="possum.jpg" alt="">
+            <!--a href="#">
                 <a title="Cody Pope / CC BY-SA (https://creativecommons.org/licenses/by-sa/2.5)" href="https://commons.wikimedia.org/wiki/File:Opossum_2.jpg"><img width="512" alt="Opossum 2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Opossum_2.jpg/512px-Opossum_2.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By Cody Pope - <a href="https://en.wikipedia.org/wiki/User:Cody.pope" class="extiw" title="wikipedia:User:Cody.pope">Wikipedia:User:Cody.pope</a>, <a href="https://creativecommons.org/licenses/by-sa/2.5" title="Creative Commons Attribution-Share Alike 2.5">CC BY-SA 2.5</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=1705724">Link</a>
             </a-->
@@ -384,10 +396,11 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="raccoon.jpg" alt="">
+            <!--a href="#">
                 <a title="David Menke
  / Public domain" href="https://commons.wikimedia.org/wiki/File:Raccoon_climbing_in_tree_-_Cropped_and_color_corrected.jpg"><img width="512" alt="Raccoon climbing in tree - Cropped and color corrected" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Raccoon_climbing_in_tree_-_Cropped_and_color_corrected.jpg/512px-Raccoon_climbing_in_tree_-_Cropped_and_color_corrected.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a href="https://www.wikidata.org/wiki/Q26235785" class="extiw" title="d:Q26235785">David Menke</a> - <a class="external free" href="https://commons.wikimedia.org/wiki/File:Raccoon_climbing_in_tree.jpg">http://commons.wikimedia.org/wiki/File:Raccoon_climbing_in_tree.jpg</a>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=24556935">Link</a>
             </a-->
@@ -433,9 +446,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="skunk.jpg" alt="">
+            <!--a href="#">
                 <a title="Dan &amp; Lin Dzurisin / CC BY (https://creativecommons.org/licenses/by/2.0)" href="https://commons.wikimedia.org/wiki/File:Striped_Skunk_(Mephitis_mephitis)_DSC_0030.jpg"><img width="512" alt="Striped Skunk (Mephitis mephitis) DSC 0030" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Striped_Skunk_%28Mephitis_mephitis%29_DSC_0030.jpg/512px-Striped_Skunk_%28Mephitis_mephitis%29_DSC_0030.jpg"></a>
-            </a>
+            </a-->
             <!--a>By <a rel="nofollow" class="external text" href="https://www.flickr.com/people/8987884@N07">Dan &amp; Lin Dzurisin</a> - originally posted to <a href="//commons.wikimedia.org/wiki/Flickr" class="mw-redirect" title="Flickr">Flickr</a> as <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/8987884@N07/4548287441">Striped Skunk (Mephitis mephitis) DSC_0030</a>, <a href="https://creativecommons.org/licenses/by/2.0" title="Creative Commons Attribution 2.0">CC BY 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=11414081">Link</a>
             </a-->
         </div>
@@ -480,9 +494,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+            <img class="card-img-top" src="squirrel.jpg" alt="">
+            <!--a href="#">
                 <a title="BirdPhotos.com / CC BY (https://creativecommons.org/licenses/by/3.0)" href="https://commons.wikimedia.org/wiki/File:Eastern_Grey_Squirrel.jpg"><img width="512" alt="Eastern Grey Squirrel" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Eastern_Grey_Squirrel.jpg/512px-Eastern_Grey_Squirrel.jpg"></a>
-            </a>
+            </a-->
             <!--a>
                 By <a href="//commons.wikimedia.org/wiki/User:Tomfriedel" title="User:Tomfriedel">BirdPhotos.com</a> - BirdPhotos.com, <a href="https://creativecommons.org/licenses/by/3.0" title="Creative Commons Attribution 3.0">CC BY 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=9645353">Link</a>
             </a-->
