--- a/termite-control.html
+++ b/termite-control.html
@@ -10,11 +10,18 @@
 
     <title>Termite Control</title>
 
+    <!-- favicon Calvert Exterminators logo -->
+    <link rel="icon" href="CalvertExt-logo.png">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
 </head>
 
