--- a/about.html
+++ b/about.html
@@ -10,11 +10,17 @@
 
   <title>About Us</title>
 
+  <!-- favicon Calvert Exterminators logo -->
+  <link rel="icon" href="CalvertExt-logo.png">
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 </head>
 
@@ -79,8 +85,9 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
             <a class="dropdown-item" href="about.html">About Us</a>
-            <a class="dropdown-item" href="clients.html">Clients</a>
-            <a class="dropdown-item" href="vet.html">Veteran Owned</a>
+            <a class="dropdown-item" href="resources.html">Additional Resources</a>
+            <!--a class="dropdown-item" href="clients.html">Clients</a-->
+            <a class="dropdown-item" href="vet.html">Veteran Discount</a>
             <a class="dropdown-item" href="faq.html">FAQ</a>
           </div>
         </li>
@@ -123,24 +130,42 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="https://placehold.it/750x450" alt="">
+        <!--img class="img-fluid rounded mb-4" src="dennis-with-dogs.png" width="750" height="450" alt=""-->
+        <img class="img" src="dennis-with-dogs.png" alt="">
       </div>
       <div class="col-lg-6">
         <h2>About Calvert Exterminators</h2>
         <p>
           Calvert Exterminators has been in business since 1981. We are experienced in the pest control industry with
-          40 years serving our community. Our business has grown in recent years to provide service to not only Southern Maryland,
+          40+ years serving our community. Our business has grown in recent years to provide service to not only Southern Maryland,
           but DC and Virginia as well! We look forward to bringing that small business community to your door, wherever that may be!
           You can place your trust in us to remove unwanted pests from your home or business.
         </p>
+        <div id="display_div_id" class="h3" style="font-family: Arial Black; color: #DFCE9D; margin-bottom: 20px"></div>
+        <script>
+          //Gets the current year so the amount of years since founding is always accurate
+          var date = new Date();
+          var year = date.getFullYear();
+
+          var dif = year-1981;
+          var display_div = document.getElementById("display_div_id");
+
+          var str_dif=dif + " years of serving our community";
+
+          //display_div.removeChild(display_div.lastChild);
+          var new_span = document.createElement('span');
+
+          var str = str_dif.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,');
+          new_span.innerText=str;
+          display_div.appendChild(new_span);
+        </script>
       </div>
       <div class="col-lg-6">
         <h2>Veteran Owned</h2>
         <p>
           Our business is veteran owned and determined to show support for the veteran community by offering veteran discounts
-          to the brave men and women who have fought for our country. The owner of Calvert Exterminators, Dennis ((((H)))), has been
+          to the brave men and women who have fought for our country. The owner of Calvert Exterminators, Dennis Heflin, has been
           giving back to the veteran community for years at the American Legion.
-
         </p>
       </div>
       <div class="col-lg-6">
@@ -148,7 +173,7 @@
         <h5>You've fought for us. Now let us fight for you.</h5>
         <p>
           Eligible customers who provide proof of service may receive a military discount as a thank you for their service.
-          To receive the discount, simply ask our staff about it while calling or emailing to arrange an appointment.
+          Enquire with our staff about it while arranging an appointment.
         </p>
       </div>
     </div>
