--- a/trapping.html
+++ b/trapping.html
@@ -10,11 +10,18 @@
 
     <title>Animal Control</title>
 
+    <!-- favicon Calvert Exterminators logo -->
+    <link rel="icon" href="CalvertExt-logo.png">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -109,8 +116,8 @@
 <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Anmimal Control
-        <small>Services</small>
+    <h1 class="mt-4 mb-3">Services
+        <small>Animal Control</small>
     </h1>
 
     <ol class="breadcrumb">
