Added a lot of pictures and cleaned up index, credits, dog-runs, mammals, and termite-control

--- a/credits.html
+++ b/credits.html
@@ -112,18 +112,11 @@
     <h1 class="mt-4 mb-3">Credits
     </h1>
 
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item active">Credits</li>
-    </ol>
-
     <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="card">
-            <div class="card-header" role="tab" id="headingOne">
+            <div class="card-header" style="background-color: white" role="tab" id="headingOne">
                 <h5 class="mb-0">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Technologies</a>
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: black">Technologies</a>
                 </h5>
             </div>
 
@@ -135,9 +128,9 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" role="tab" id="headingTwo">
+            <div class="card-header" style="background-color: white" role="tab" id="headingTwo">
                 <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Images
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: black">Images
                     </a>
                 </h5>
             </div>
@@ -189,18 +182,6 @@
                     <a href="https://commons.wikimedia.org/wiki/File:Black_Rat_Snake_-_Elaphe_obsoleta_obsoleta,_Merrimac_Farm_Wildlife_Management_Area,_Virginia.jpg" title="via Wikimedia Commons">Judy Gallagher</a> / <a href="https://creativecommons.org/licenses/by/2.0">CC BY</a>
                     <a href="https://commons.wikimedia.org/wiki/File:Coast_Garter_Snake.jpg" title="via Wikimedia Commons">Steve Jurvetson from Menlo Park, USA</a> / <a href="https://creativecommons.org/licenses/by/2.0">CC BY</a>
                     <a href="https://commons.wikimedia.org/wiki/File:Nerodia_sipedonPCSL02111B1.jpg" title="via Wikimedia Commons">Patrick Coin (Patrick Coin)</a> / <a href="https://creativecommons.org/licenses/by-sa/2.5">CC BY-SA</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header" role="tab" id="headingThree">
-                <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</a>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
-                <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                 </div>
             </div>
         </div>
