--- a/dog-runs.html
+++ b/dog-runs.html
@@ -117,7 +117,6 @@
     <h1 class="mt-4 mb-3">Services
         <small>Dog Runs</small>
     </h1>
-
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
@@ -126,7 +125,12 @@
     </ol>
 
     <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="https://placehold.it/1200x300" alt="">
+    <div class="row h-100">
+        <div class="col-sm-12 my-auto">
+            <img class="center-block" src="dogs(wide).jpg" alt="">
+        </div>
+    </div>
+
     <div class="row">
         <div class="card h-100 bg-main my-3">
             <h4 class="card-header"></h4>
@@ -238,7 +242,7 @@
     <!-- /.row -->
     <h4>MORE</h4>
     <div clas="row">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3fjQOn5_EUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FCalvertExterminators%2Fvideos%2F736965800276451%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
 
 </div>
