--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 </head>
 
 <body onload="incrementCount(6636050855001)">
-
   <!-- COVID Banner -->
   <!--div class="container-fluid">
     <div style="background-color: #006FBF;">
@@ -148,33 +147,38 @@
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <!-- BACKGROUND IMAGE: FINISHED CONTACT PAGE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-        <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('email.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3 class="h3-carousel">New contact form!</h3>
-            <p>As part of our website overhaul, a new contact page has been created with convenience in mind.
+            <h3 class="h3-carousel rounded">New contact form!</h3>
+            <h6 class="rounded" style="background-color: white; color: black;">
+              As part of our website overhaul, a new contact page has been created with convenience in mind.
               Simply enter your contact information and choose the type of service needed from the dropdown.
               Our website will take care of the rest and we will contact you within one business day to set up a time slot!
-            </p>
+            </h6>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('https://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('dennis-with-dogs(wide).png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3 class="h3-carousel">Dog runs!</h3>
-            <p>Some infestations require special, more natural intervention.
-            Our dog runs involve the usage of our four humanely trained canine exterminators
-            in the sniffing out of rodents, mosquitoes, bed bugs, and termites.
-            Wherever pests may be, our dogs will find them.</p>
+            <h3 class="h3-carousel rounded">Dog runs!</h3>
+            <h6 class="rounded" style="background-color: white; color: black;">
+              Some infestations require special, more natural intervention.
+              Our dog runs involve the usage of our four humanely trained canine exterminators
+              in the sniffing out of rodents, mosquitoes, bed bugs, and termites.
+              Wherever pests may be, our dogs will find them.
+            </h6>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <!--div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')"-->
-        <div class="carousel-item" style="background-image: url('dennis-with-dogs.png')">
+        <div class="carousel-item" style="background-image: url('termites.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3 class="h3-carousel">Got Termites?</h3>
-            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
+            <h3 class="h3-carousel rounded">Got Termites?</h3>
+            <h6 class="rounded" style="background-color: white; color: black;">
+              We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
               These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
-              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
+              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!
+            </h6>
           </div>
         </div>
       </div>
@@ -321,17 +325,17 @@
     </div-->
 
     <!-- Live count section -->
-    <div class="container-fluid" style="background:transparent url('https://cdn.pixabay.com/photo/2013/12/07/17/23/sunrise-224749_960_720.jpg') no-repeat center center /cover;">
+    <div class="container-fluid rounded" style="background:transparent url('https://cdn.pixabay.com/photo/2013/12/07/17/23/sunrise-224749_960_720.jpg') no-repeat center center /cover;">
       <div class="row mb-4">
         <div class="col-sm-12 my-auto" style="margin-bottom: 20px">
           <h3 class="text-center">Bugs killed since 1981*</h3>
         </div>
         <div class="col-sm-12 my-auto" style="margin-bottom: 20px">
-          <div id="display_div_id" style="font-weight:bold; color: white; margin-bottom: 20px" class="h1 text-center">
+          <div id="display_div_id" style="color: white; margin-bottom: 20px" class="h1 text-center">
           </div>
         </div>
         <div class="col-sm-12 my-auto" style="margin-top: 20px">
-          <h3 class="text-center">*This number is an estimation, and we still feel it is low.</h3>
+          <h6 class="text-center">*This number is an estimation, and we still feel it is low.</h6>
         </div>
       </div>
       <script>
@@ -371,9 +375,6 @@
       <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
         <!--Card-->
         <div class="card testimonial-card">
-          <!--Background color-->
-          <!--div class="card-up blue-gradient">
-          </div-->
           <!--Avatar-->
           <div class="avatar mx-auto white">
             <img src="Willie.jpg" alt="Avatar" class="avatar">
@@ -593,14 +594,14 @@
       <div class="col">
         <!-- Twitter Feed -->
         <div class="col-lg-8 mb-4">
-          <a class="twitter-timeline" data-width="250" data-height="200" data-theme="dark" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> <!--iframe-- width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe-->
+          <a class="twitter-timeline" data-width="250" data-height="500" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
 
       <div class="col">
         <!-- Facebook Feed -->
         <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="coWTDskS"></script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="51Kg0TGI"></script>
         <div class="col-lg-8 mb-4">
           <div class="fb-page" data-href="https://www.facebook.com/CalvertExterminators" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/CalvertExterminators" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/CalvertExterminators">Calvert Exterminators</a></blockquote></div>
         </div>
@@ -612,8 +613,48 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Calvert Exterminators 2020</p>
-      <a class="m-0 text-center text-white" href="credits.html">Licenses and credits</a>
+      <div class="row">
+        <div class="col">
+          <img classs="img-responsive" width="50%" height="" src="CalvertExt-logo.png" style="position:left;">
+        </div>
+        <div class="col-sm">
+          <h6>135 W. Dares Beach Road <br>Prince Frederick, MD 20678</h6>
+          <a href = "mailto: calvertextmd@gmail.com">calvertextmd@gmail.com</a><br>
+          <a href = "mailto: calvertextdc@gmail.com">calvertextdc@gmail.com - For DC area!</a><br>
+          <a href="tel:410-535-8661">(410) 535-8661</a>
+        </div>
+        <div class="col-sm">
+          <h5>
+            Hours
+          </h5>
+          <h6>
+            Monday-Friday <br>9am-5pm
+          </h6>
+        </div>
+        <div class="col-sm">
+          <h5>Follow</h5>
+          <div class="row">
+            <div class="col-sm">
+              <a class="link" style="font-size:2em; color:#2E9CCA;" href="https://twitter.com/CalvrtXtermin8r"><i class="fa fa-twitter"></i></a>
+            </div>
+            <div class="col-sm">
+              <a class="link" style="font-size:2em; color:#2E9CCA" href="https://www.instagram.com/calvertexterminators/"><i class="fa fa-instagram"></i></a>
+            </div>
+            <div class="col-sm">
+              <a class="link" style="font-size:2em; color:#2E9CCA" href="https://www.facebook.com/CalvertExterminators"><i class="fa fa-facebook"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-sm">
+          <p class="m-0 text-center text-white">Copyright &copy; Calvert Exterminators 2021</p>
+        </div>
+        <div class="col-sm">
+          <a class="m-0 text-right text-white" href="credits.html">Licenses and credits</a>
+        </div>
+      </div>
     </div>
     <!-- /.container -->
   </footer>
