--- a/termite-control.html
+++ b/termite-control.html
@@ -137,31 +137,31 @@
         <div class="col-md-4">
             <h2 class="my-3">HOW TERMITE CONTROL WORKS</h2>
             <p>Homeowners lose an average of $3,000 to termite damage. Stay ahead of this unseen enemy.</p>
-            <h4 class="my-3">THE STEPS:</h4>
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">DETECT</button>
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">PERFORM</button>
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">OBSERVE</button>
+            <h4 class="my-3">TREATMENTS:</h4>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">Soil</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">Wood</button>
+            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">Bait</button>
 
-            <div id="div1" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
-                <h5 class="text-center">Inspection</h5>
+            <div id="div1" name="info" class="rounded" style="display:none; background-color: #2E9CCA;">
                 <p class="text-center">
-                    A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture,
-                    your foundation for wood debris, and other risk areas that may attract an infestation. Calvert Exterminators utilizes
-                    tried-and-true detection methods along with a keen eye for even the most minute details in order to fully assess the level of infestation and damage.
-                    Upon completing the initial sweep, we will recommend a service method along with a personalized price tag, just for you.
+                    Before directly infesting a home, termites live in the soil around your home or property and will
+                    emerge to eat away at the foundation. Subterranean colonies such as there are very large.
+                    By treating the soil itself, we hit the termites where they live.
+                    We treat the soil by digging a trench around the foundation, treating the soil, and refilling the trench.
+                    The refilled trench acts as a barrier, killing any termites that attempt to enter or exit the property.
                 </p>
             </div>
             <div id="div2" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
                 <p class="text-center">
-                    If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
-                    Our solutions vary based on the current season, species of termite, location of infestation, and extent of infestation. These factors
-                    are all important to solving your problem while saving you money.
+                    If an infestation becomes severe enough, we will treat the wood itself inorder to cut off the colony's food supply.
+                    Termiticide spray can be sprayed directly onto or injected into the wood around the perimeter of the house and at entry points.
                 </p>
             </div>
             <div id="div3" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
                 <p class="text-center">
-                    After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
-                    Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
+                    Termite bait can be used to slowly and reliably starve out termite colonies. By installing bait traps around
+                    the perimeter of the property and monitoring the traps on regular return visits, we can examine how well our placements are working.
+                    By examining the success of traps, we can adjust their locations maximum efficiency.
                 </p>
             </div>
 
